--- a/Prototipov1/Prototipov1.csproj
+++ b/Prototipov1/Prototipov1.csproj
@@ -126,11 +126,11 @@
     <Compile Include="MenuVoluntarioCadastro.Designer.cs">
       <DependentUpon>MenuVoluntarioCadastro.cs</DependentUpon>
     </Compile>
-    <Compile Include="MenuVoluntáriosAtualizarCadastro.cs">
+    <Compile Include="MenuVoluntáriosAtividades.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MenuVoluntáriosAtualizarCadastro.Designer.cs">
-      <DependentUpon>MenuVoluntáriosAtualizarCadastro.cs</DependentUpon>
+    <Compile Include="MenuVoluntáriosAtividades.Designer.cs">
+      <DependentUpon>MenuVoluntáriosAtividades.cs</DependentUpon>
     </Compile>
     <Compile Include="MenuVoluntarioRelatorio.cs">
       <SubType>Form</SubType>
@@ -197,8 +197,8 @@
     <EmbeddedResource Include="MenuVoluntarioCadastro.resx">
       <DependentUpon>MenuVoluntarioCadastro.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MenuVoluntáriosAtualizarCadastro.resx">
-      <DependentUpon>MenuVoluntáriosAtualizarCadastro.cs</DependentUpon>
+    <EmbeddedResource Include="MenuVoluntáriosAtividades.resx">
+      <DependentUpon>MenuVoluntáriosAtividades.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MenuVoluntarioRelatorio.resx">
       <DependentUpon>MenuVoluntarioRelatorio.cs</DependentUpon>
