--- a/Prototipov1/Prototipov1.csproj
+++ b/Prototipov1/Prototipov1.csproj
@@ -100,6 +100,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="VO\ControleFinanceiroVO.cs" />
+    <Compile Include="DAO\ControleFinanceiro.cs" />
     <Compile Include="Helpers\dbs.cs" />
     <Compile Include="MenuBazar.cs">
       <SubType>Form</SubType>
