--- a/Prototipov1/App.config
+++ b/Prototipov1/App.config
@@ -3,7 +3,7 @@
 	<configSections>
 	</configSections>
 	<connectionStrings>
-		<add name="Prototipov1.Properties.Settings.crudConnectionString" connectionString="server=localhost;User Id=root;password='@We071120';database=caring_copilot" providerName="MySql.Data.MySqlClient" />
+		<add name="Prototipov1.Properties.Settings.crudConnectionString" connectionString="server=localhost;User Id=root;password='PelCom1174@';database=caring_copilot" providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
