--- a/Prototipov1/packages.config
+++ b/Prototipov1/packages.config
@@ -1,17 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Aspose.Words" version="23.11.0" targetFramework="net472" />
   <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net472" />
-  <package id="DocX" version="2.5.0" targetFramework="net472" />
-  <package id="EPPlus" version="7.0.1" targetFramework="net472" />
-  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net472" />
-  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.21.9" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.3.5" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.3.5" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.8" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net472" />
+  <package id="Microsoft.Office.Excel" version="14.0.4760.1000" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net472" />
   <package id="MySql.Data" version="8.2.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
