--- a/Prototipov1/Prototipov1.csproj
+++ b/Prototipov1/Prototipov1.csproj
@@ -51,13 +51,33 @@
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.5.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.IO.RecyclableMemoryStream, Version=1.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IO.RecyclableMemoryStream.1.4.1\lib\net46\Microsoft.IO.RecyclableMemoryStream.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1001\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Word.15.0.4797.1004\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="MySql.Data, Version=8.2.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.2.0\lib\net462\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Office, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Excel.14.0.4760.1000\lib\net20\Office.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
+    <Reference Include="System.ComponentModel.Annotations, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ComponentModel.Annotations.5.0.0\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
+    </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.ConfigurationManager, Version=4.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Configuration.ConfigurationManager.4.4.1\lib\net461\System.Configuration.ConfigurationManager.dll</HintPath>
@@ -81,6 +101,8 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="System.Security" />
+    <Reference Include="System.Threading.Tasks" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
@@ -100,6 +122,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAO\CadastroBeneficiarios.cs" />
+    <Compile Include="DAO\CadastroDoadores.cs" />
+    <Compile Include="Helpers\Validacoes.cs" />
+    <Compile Include="ReembolsoDespesas.cs" />
+    <Compile Include="VO\CadastroBeneficiariosVO.cs" />
+    <Compile Include="VO\CadastroDoadoresVO.cs" />
+    <Compile Include="VO\ControleFinanceiroVO.cs" />
+    <Compile Include="DAO\ControleFinanceiro.cs" />
+    <Compile Include="Helpers\dbs.cs" />
     <Compile Include="MenuBazar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -196,6 +227,8 @@
     <Compile Include="MenuVoluntarioRelatorio.Designer.cs">
       <DependentUpon>MenuVoluntarioRelatorio.cs</DependentUpon>
     </Compile>
+    <Compile Include="DAO\PlanoDeContas.cs" />
+    <Compile Include="VO\PlanoDeContasVO.cs" />
     <Compile Include="TelaCadastroLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -215,12 +248,6 @@
     </Compile>
     <Compile Include="TelaPerfil.Designer.cs">
       <DependentUpon>TelaPerfil.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TelaRelatorioControleFinanceiro.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TelaRelatorioControleFinanceiro.Designer.cs">
-      <DependentUpon>TelaRelatorioControleFinanceiro.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="MenuBazar.resx">
       <DependentUpon>MenuBazar.cs</DependentUpon>
@@ -288,9 +315,6 @@
     </Compile>
     <EmbeddedResource Include="TelaPerfil.resx">
       <DependentUpon>TelaPerfil.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="TelaRelatorioControleFinanceiro.resx">
-      <DependentUpon>TelaRelatorioControleFinanceiro.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
