--- a/Prototipov1/Prototipov1.csproj
+++ b/Prototipov1/Prototipov1.csproj
@@ -124,6 +124,7 @@
   <ItemGroup>
     <Compile Include="DAO\CadastroBeneficiarios.cs" />
     <Compile Include="DAO\CadastroDoadores.cs" />
+    <Compile Include="Helpers\Validacoes.cs" />
     <Compile Include="ReembolsoDespesas.cs" />
     <Compile Include="VO\CadastroBeneficiariosVO.cs" />
     <Compile Include="VO\CadastroDoadoresVO.cs" />
